<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/cb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boxing"
        android:gravity="center"/>

    <CheckBox
        android:id="@+id/cb2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kickboxing"
        android:gravity="center"/>

    <CheckBox
        android:id="@+id/cb3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judo"
        android:gravity="center"/>

    <CheckBox
        android:id="@+id/cb4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/karate"
        android:gravity="center"/>

    <CheckBox
        android:id="@+id/cb5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/football"
        android:gravity="center"/>

    <CheckBox
        android:id="@+id/cb6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taekwondo"
        android:gravity="center"/>

    <CheckBox
        android:id="@+id/cb7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wrestling"
        android:gravity="center"/>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:max="10"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:numStars="5"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android"/>

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ios"/>

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linux"/>

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/windows"/>

    </RadioGroup>

</LinearLayout>